fixed line spacing issues and changed README

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,6 +68,10 @@ body {
 	font-style: italic;
 }
 
+p {
+	margin-bottom: 2px;
+}
+
 /* wrapper */
 .wrapper {
 	padding: 1em;
